@@ -16,6 +16,8 @@ import java.util.TreeMap;
 
 import net.sourceforge.pmd.util.FileFinder;
 
+import org.apache.commons.io.FilenameUtils;
+
 public class CPD {
 
     private static final int MISSING_FILES = 1;
@@ -93,7 +95,7 @@ public class CPD {
             current.add(signature);
         }
 
-        if (!file.getCanonicalPath().equals(file.getAbsolutePath())) {
+        if (!FilenameUtils.equalsNormalizedOnSystem(file.getAbsoluteFile().getCanonicalPath(), file.getAbsolutePath())) {
             System.err.println("Skipping " + file + " since it appears to be a symlink");
             return;
         }
