@@ -1,3 +1,8 @@
+????? ??, 2013 - 5.0.4:
+
+Fixed bug 1081: Regression: CPD skipping all files when using relative paths
+
+
 April 5, 2013 - 5.0.3:
 
 Fixed bug  938: False positive on LooseCoupling for overriding methods
